@@ -65,6 +65,7 @@
 #define CP_BEACON_ALL "beacon"
 #define CP_BEACON_ON  "flash %s"
 #define CP_BEACON_OFF "unflash %s"
+#define CP_VERBOSE    "verbose"
 
 /* 
  * Responses - 
@@ -99,6 +100,7 @@
  "304 beacon [<nodes>]   - query beacon status (if available)"      CP_EOL \
  "304 flash <nodes>      - set beacon to ON (if available)"         CP_EOL \
  "304 unflash <nodes>    - set beacon to OFF (if available)"        CP_EOL \
+ "304 verbose            - toggle server verbosity"                 CP_EOL \
  "304 help               - display help"                            CP_EOL \
  "104 quit               - logout"                                  CP_EOL
 #define CP_RSP_COMPLETE     "105 Command completed successfully"    CP_EOL
@@ -106,6 +108,7 @@
 #define CP_RSP_DEVICE  \
  "306 %s: reconnects=%-3.3d actions=%-3.3d type=%s hosts=%s"        CP_EOL
 #define CP_RSP_QUERY_COMPLETE "106 Query complete"                  CP_EOL
+#define CP_RSP_VERBOSE      "107 Server verbosity %s"               CP_EOL
 
 /* failure */
 #define CP_ERR_FAILURE      "200 Failure"                           CP_EOL
